# EasyMono

./: .gitignore  CMakeLists.txt  EasyMono.sln  LICENSE  ParseCppHeaders.bat  ParseManagedLibrary.bat  README.md
CPPtoCSInteropGenerator/: CPPtoCSInteropGenerator.csproj  CSClassParser.cs
CPPtoCSInteropGenerator/Properties/: launchSettings.json
CStoCPPInteropGenerator/: CPPHeaderParser.cpp  CStoCPPInteropGenerator.vcxproj  CStoCPPInteropGenerator.vcxproj.filters
Include/: EasyMono.h
Test/: Dictionary.txt  ParserConfig.txt  ScriptTest.h  ScriptedClassBase.h  Test.vcxproj  TestStruct.h  test.cpp
Test/CSInterop/MonoTest/: Testbed.h
TestManaged/: ExportToCpp.cs  NativeReference.cs  TestManaged.csproj  Testbed.cs
